--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ body{
     border: none;
     border-radius: 8px;
     outline: none;
-    text-transform: 500;
-    letter-spacing: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
     color: #2b134b;
   }
